--- a/style.css
+++ b/style.css
@@ -57,3 +57,14 @@ h4 {
 .menu-text {
   padding-top: 20px;
 }
+
+img{
+  transition: transform 0.5s ease-in-out;
+}
+
+img:hover{
+  opacity: 0.8;
+  cursor: pointer;
+  transform: scale(1.02);
+  
+}
